--- a/test_dataframe.ipynb
+++ b/test_dataframe.ipynb
@@ -14,7 +14,9 @@
     "import ipywidgets as iw\n",
     "\n",
     "from IPython.display import display\n",
-    "from datetime import datetime as dt"
+    "from datetime import datetime as dt\n",
+    "\n",
+    "from make_df_widgets import DFWidgets"
    ]
   },
   {
@@ -23,365 +25,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_df_from_conf(df_conf):\n",
-    "    num_rows = df_conf['num_rows']\n",
-    "    df = pd.DataFrame()\n",
-    "    for feature in df_conf['df_confs'].keys():\n",
-    "        features = []\n",
-    "        nan_rate = df_conf['df_confs'][feature]['nan_rate']\n",
-    "        dtype = df_conf['df_confs'][feature]['dtype']\n",
-    "        if dtype=='str':\n",
-    "            unique = df_conf['df_confs'][feature]['unique']\n",
-    "            if unique==\"Random letter\":\n",
-    "                for i in range(num_rows):\n",
-    "                    random_list = [random.choice(string.ascii_lowercase) for n in range(df_conf['df_confs'][feature]['digits'])]\n",
-    "                    features.append(\"\".join(random_list))\n",
-    "            elif unique==\"Random number\":\n",
-    "                for i in range(num_rows):\n",
-    "                    random_int = random.randint(df_conf['df_confs'][feature]['min'], df_conf['df_confs'][feature]['max'])\n",
-    "                    features.append(str(random_int).zfill(df_conf['df_confs'][feature]['digits']))\n",
-    "            elif unique==\"Seaquential number\":\n",
-    "                start = df_conf['df_confs'][feature]['start']\n",
-    "                features = [\n",
-    "                    str(i).zfill(df_conf['df_confs'][feature]['digits'])\n",
-    "                    for i in range(start, start+num_rows)\n",
-    "                ]\n",
-    "            elif unique==\"yourself\":\n",
-    "                features = random.choices(df_conf['df_confs'][feature]['unique_list'].split(','), k=num_rows)\n",
-    "            features = np.array(features)\n",
-    "        elif dtype=='int':\n",
-    "            for i in range(num_rows):\n",
-    "                random_int = random.randint(df_conf['df_confs'][feature]['min'], df_conf['df_confs'][feature]['max'])\n",
-    "                features.append(random_int)\n",
-    "            features = np.array(features)\n",
-    "            if nan_rate!=0:\n",
-    "                print(f'On the int column \"{feature}\", np.nan are detected. This column is converted to float.')\n",
-    "                features = features.astype(float)\n",
-    "        elif dtype=='float':\n",
-    "            for i in range(num_rows):\n",
-    "                random_int = random.uniform(df_conf['df_confs'][feature]['min'], df_conf['df_confs'][feature]['max'])\n",
-    "                features.append(random_int)\n",
-    "            features = np.array(features)\n",
-    "        elif dtype=='datetime':\n",
-    "            freq = df_conf['df_confs'][feature]['dt_freq'][0]\n",
-    "            date = pd.date_range(start=df_conf['df_confs'][feature]['start'], end=df_conf['df_confs'][feature]['end'], freq=freq)\n",
-    "            date = np.tile(date.values, num_rows//len(date)+1)\n",
-    "            features = date[:num_rows]\n",
+    "def upload_json(json_path):\n",
+    "    try:\n",
+    "        with open(json_path, mode='r') as f:\n",
+    "            df_dict = json.load(f)\n",
+    "    except Exception as e:\n",
+    "        df_dict = {}\n",
+    "        print(e)\n",
     "        \n",
-    "        if nan_rate!=0:\n",
-    "            nan_idx = random.sample(range(num_rows), round(num_rows*nan_rate))\n",
-    "            features[nan_idx] = np.nan\n",
-    "        df[feature] = features\n",
-    "    return df"
+    "    return df_dict"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Errno 2] No such file or directory: 'test_df.json'\n"
+     ]
+    }
+   ],
    "source": [
-    "def make_df(widgets):\n",
-    "    df_conf = {'num_rows':widgets.children[2].value, 'df_confs':{}}\n",
-    "    dtypes = {}\n",
-    "    \n",
-    "    for boxes in widgets.children[3:]:\n",
-    "        for box in boxes.children:\n",
-    "            if isinstance(box, iw.widget_button.Button):\n",
-    "                break\n",
-    "            feature = box.children[0].value\n",
-    "            dtype = box.children[2].value\n",
-    "            df_conf['df_confs'][feature] = {}\n",
-    "            df_conf['df_confs'][feature]['nan_rate'] = box.children[1].value\n",
-    "            df_conf['df_confs'][feature]['dtype'] = dtype\n",
-    "            dtypes[feature] = dtype\n",
-    "            if dtype=='str':\n",
-    "                unique = box.children[3].children[0].value\n",
-    "                df_conf['df_confs'][feature]['unique'] = unique\n",
-    "                if unique=='Random letter':\n",
-    "                    df_conf['df_confs'][feature]['digits'] = box.children[3].children[1].children[0].value\n",
-    "                elif unique=='Random number':\n",
-    "                    df_conf['df_confs'][feature]['digits'] = box.children[3].children[1].children[0].value\n",
-    "                    df_conf['df_confs'][feature]['max'] = box.children[3].children[1].children[1].value\n",
-    "                    df_conf['df_confs'][feature]['min'] = box.children[3].children[1].children[2].value\n",
-    "                elif unique=='Seaquential number':\n",
-    "                    df_conf['df_confs'][feature]['digits'] = box.children[3].children[1].children[0].value\n",
-    "                    df_conf['df_confs'][feature]['start'] = box.children[3].children[1].children[1].value\n",
-    "                elif unique=='yourself':\n",
-    "                    df_conf['df_confs'][feature]['unique_list'] = box.children[3].children[1].children[0].value\n",
-    "            elif dtype=='int':\n",
-    "                df_conf['df_confs'][feature]['max'] = box.children[3].children[0].value\n",
-    "                df_conf['df_confs'][feature]['min'] = box.children[3].children[1].value\n",
-    "            elif dtype=='float':\n",
-    "                df_conf['df_confs'][feature]['max'] = box.children[3].children[0].value\n",
-    "                df_conf['df_confs'][feature]['min'] = box.children[3].children[1].value\n",
-    "            elif dtype=='datetime':\n",
-    "                df_conf['df_confs'][feature]['dt_start'] = box.children[3].children[0].value\n",
-    "                df_conf['df_confs'][feature]['dt_end'] = box.children[3].children[1].value\n",
-    "                df_conf['df_confs'][feature]['dt_freq'] = box.children[3].children[2].value\n",
-    "        \n",
-    "    return df_conf, make_df_from_conf(df_conf)"
+    "df_dict = upload_json('test_df.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def str_unique_setting(unique):\n",
-    "    unique_widgets = []\n",
-    "    if unique == 'Random letter':\n",
-    "        unique_widgets.append(\n",
-    "            iw.BoundedIntText(\n",
-    "                value=8,\n",
-    "                min=1,\n",
-    "                max=10,\n",
-    "                step=1,\n",
-    "                description='Char digits',\n",
-    "                disabled=False,\n",
-    "            )\n",
-    "        )\n",
-    "    elif unique == 'Random number':\n",
-    "        unique_widgets.append(\n",
-    "            iw.BoundedIntText(\n",
-    "                value=8,\n",
-    "                min=1,\n",
-    "                max=10,\n",
-    "                step=1,\n",
-    "                description='Char digits',\n",
-    "                disabled=False,\n",
-    "            )\n",
-    "        )\n",
-    "        unique_widgets.append(\n",
-    "            iw.IntText(\n",
-    "                step=1,\n",
-    "                description='Max',\n",
-    "                disabled=False\n",
-    "            )\n",
-    "        )\n",
-    "        unique_widgets.append(\n",
-    "            iw.IntText(\n",
-    "                step=1,\n",
-    "                description='Min',\n",
-    "                disabled=False\n",
-    "            )\n",
-    "        )\n",
-    "    elif unique == 'Seaquential number':\n",
-    "        unique_widgets.append(\n",
-    "            iw.BoundedIntText(\n",
-    "                value=8,\n",
-    "                min=1,\n",
-    "                max=10,\n",
-    "                step=1,\n",
-    "                description='Char digits',\n",
-    "                disabled=False,\n",
-    "            )\n",
-    "        )\n",
-    "        unique_widgets.append(\n",
-    "            iw.IntText(\n",
-    "                step=1,\n",
-    "                description='Start',\n",
-    "                disabled=False\n",
-    "            )\n",
-    "        )\n",
-    "    elif unique == 'yourself':\n",
-    "        unique_widgets.append(\n",
-    "            iw.Text(\n",
-    "                description='Unique list',\n",
-    "                value='',\n",
-    "                placeholder='aaa,bbb,ccc,..(*No space)',\n",
-    "            )\n",
-    "        )\n",
-    "    return iw.VBox(unique_widgets)\n",
-    "        \n",
-    "\n",
-    "def str_setting():\n",
-    "    unique = iw.Dropdown(\n",
-    "        description=\"Unique\",\n",
-    "        options = [\"Random letter\", \"Random number\", \"Seaquential number\", \"yourself\"],\n",
-    "        value=None,\n",
-    "    )\n",
-    "    def on_value_change(change) -> None:\n",
-    "        if change['name'] == 'value':\n",
-    "            if len(df_str.children)>=2:\n",
-    "                pop_n_widgets(df_str, -1)\n",
-    "            df_str.children += (str_unique_setting(change['new']),)\n",
-    "    \n",
-    "    unique.observe(on_value_change, names='value')\n",
-    "    df_str = iw.VBox([unique])\n",
-    "    return df_str\n",
-    "\n",
-    "\n",
-    "def int_setting():\n",
-    "    int_max = iw.IntText(\n",
-    "        step=1,\n",
-    "        description='Max',\n",
-    "        disabled=False\n",
-    "    )\n",
-    "    int_min = iw.IntText(\n",
-    "        step=1,\n",
-    "        description='Min',\n",
-    "        disabled=False\n",
-    "    )\n",
-    "    df_int = iw.VBox([int_max, int_min])\n",
-    "    return df_int\n",
-    "\n",
-    "\n",
-    "def float_setting():\n",
-    "    float_max = iw.FloatText(\n",
-    "        step=0.01,\n",
-    "        description='Max',\n",
-    "        disabled=False\n",
-    "    )\n",
-    "    float_min = iw.FloatText(\n",
-    "        step=0.01,\n",
-    "        description='Min',\n",
-    "        disabled=False\n",
-    "    )\n",
-    "    df_float = iw.VBox([float_max, float_min])\n",
-    "    return df_float\n",
-    "\n",
-    "\n",
-    "def datetime_setting():\n",
-    "    dt_start = iw.Text(\n",
-    "        description='Start',\n",
-    "        value='',\n",
-    "        placeholder='YYYY/MM/DD',\n",
-    "    )\n",
-    "    dt_end = iw.Text(\n",
-    "        description='End',\n",
-    "        value='',\n",
-    "        placeholder='YYYY/MM/DD',\n",
-    "    )\n",
-    "    freq = iw.Dropdown(\n",
-    "        description=\"Freq\",\n",
-    "        options = [\"Daily\", \"Monthly\", \"Yearly\"],\n",
-    "        value=None,\n",
-    "    )\n",
-    "    df_dt = iw.VBox([dt_start, dt_end, freq])\n",
-    "    return df_dt\n",
-    "\n",
-    "\n",
-    "def make_df_setting():\n",
-    "    featurename = iw.Text(\n",
-    "        description='Feat Name',\n",
-    "        value='',\n",
-    "    )\n",
-    "    nan_rate = iw.BoundedFloatText(\n",
-    "        step=0.01,\n",
-    "        value=0.0,\n",
-    "        max=1.0,\n",
-    "        min=0.0,\n",
-    "        description='NaN rate',\n",
-    "        disabled=False\n",
-    "    )\n",
-    "    dtype = iw.Dropdown(\n",
-    "        description=\"Dtype\",\n",
-    "        options = [\"str\", \"int\", \"float\", \"datetime\"],\n",
-    "        value=None,\n",
-    "    )\n",
-    "    \n",
-    "    def on_value_change(change) -> None:\n",
-    "        if change['name'] == 'value':\n",
-    "            if len(df_conf.children)>=4:\n",
-    "                pop_n_widgets(df_conf, -1)\n",
-    "            \n",
-    "            if change['new'] == 'str':\n",
-    "                df_conf.children += (str_setting(),)\n",
-    "            elif change['new'] == 'int':\n",
-    "                df_conf.children += (int_setting(),)\n",
-    "            elif change['new'] == 'float':\n",
-    "                df_conf.children += (float_setting(),)\n",
-    "            elif change['new'] == 'datetime':\n",
-    "                df_conf.children += (datetime_setting(),)\n",
-    "    \n",
-    "    dtype.observe(on_value_change, names='value')\n",
-    "    \n",
-    "    df_conf = iw.VBox([featurename, nan_rate, dtype], layout=iw.Layout(border='1px solid #C8C8C8'))\n",
-    "    return df_conf\n",
-    "\n",
-    "\n",
-    "def pop_n_widgets(box, n):\n",
-    "    widgets = list(box.children)\n",
-    "    pop_w = widgets.pop(n)\n",
-    "    box.children = tuple(widgets)\n",
-    "    return pop_w\n",
-    "\n",
-    "\n",
-    "def show_widgets():\n",
-    "    make_button = iw.Button(description='make DF')\n",
-    "    df_name = iw.Text(\n",
-    "        description='DF Name',\n",
-    "        value='test_df',\n",
-    "    )\n",
-    "    num_rows = iw.BoundedIntText(\n",
-    "        value=100,\n",
-    "        min=0,\n",
-    "        max=1e8,\n",
-    "        step=1,\n",
-    "        description='Num Rows',\n",
-    "        disabled=False,\n",
-    "    )\n",
-    "    df_conf = make_df_setting()\n",
-    "    add_button = iw.Button(description='Add Feature')\n",
-    "    \n",
-    "    df_confs = iw.VBox([make_button, df_name, num_rows, iw.Box([df_conf, add_button])])\n",
-    "    \n",
-    "    def on_click(clicked_button: iw.Button) -> None:\n",
-    "        if len(df_confs.children[-1].children) < 4:\n",
-    "            add_button = pop_n_widgets(df_confs.children[-1], -1)\n",
-    "            df_confs.children[-1].children += (make_df_setting(), add_button)\n",
-    "        else:\n",
-    "            add_button = pop_n_widgets(df_confs.children[-1], -1)\n",
-    "            df_confs.children[-1].children += (make_df_setting(),)\n",
-    "            df_confs.children += (iw.Box([add_button]),)\n",
-    "    \n",
-    "    out = iw.Output(layout={'border': '1px solid black'})\n",
-    "    def on_click_make_df(clicked_button: iw.Button) -> None:\n",
-    "        with out:\n",
-    "            df_dict, df = make_df(df_confs)\n",
-    "            with open(f'{df_name.value}.json', mode='w') as f:\n",
-    "                json.dump(df_dict, f, indent=2, ensure_ascii=False)\n",
-    "            df.to_csv(f'{df_name.value}.csv', index=False)\n",
-    "    \n",
-    "    add_button.on_click(on_click)\n",
-    "    make_button.on_click(on_click_make_df)\n",
-    "    display(df_confs, out)"
+    "df_w = DFWidgets(df_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def upload_json():\n",
-    "    out = iw.Output(layout={'border': '1px solid black'})\n",
-    "    uploads = iw.Text(\n",
-    "        description='JSON Path',\n",
-    "        value='',\n",
-    "        placeholder='xxxx.json',\n",
-    "    )\n",
-    "    with out:\n",
-    "        try:\n",
-    "            with open(uploads.value, mode='r') as f:\n",
-    "                df_dict = json.load(f)\n",
-    "        except Excepton as e:\n",
-    "            print(e)\n",
-    "        \n",
-    "        show_widgets(df_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "151bafb63d05405786cc06628ea094be",
+       "model_id": "154e7e1a6ea64c8382639b41ef0fc9db",
        "version_major": 2,
        "version_minor": 0
       },
@@ -395,12 +84,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f837d831574d4babbc6f919d3c61104d",
+       "model_id": "ab14398841764eeca790641287097d09",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Output(layout=Layout(border_bottom='1px solid black', border_left='1px solid black', border_right='1px solid b…"
+       "VBox(children=(Box(children=(VBox(children=(Box(children=(Text(value='', description='Feat Name', layout=Layou…"
       ]
      },
      "metadata": {},
@@ -408,7 +97,38 @@
     }
    ],
    "source": [
-    "show_widgets()"
+    "df_w.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
+      "\u001b[1;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "assert False # Stop run all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('test_df.csv')\n",
+    "df.head()"
    ]
   },
   {
@@ -435,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.7"
   },
   "vscode": {
    "interpreter": {
