--- a/test_dataframe.ipynb
+++ b/test_dataframe.ipynb
@@ -45,12 +45,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Errno 2] No such file or directory: 'test_df.json'\n"
+      "[Errno 2] No such file or directory: ''\n"
      ]
     }
    ],
    "source": [
-    "df_dict = upload_json('test_df.json')"
+    "df_dict = upload_json('')"
    ]
   },
   {
@@ -70,7 +70,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "154e7e1a6ea64c8382639b41ef0fc9db",
+       "model_id": "b286693156074a5f9b2cd802c0ee7af4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -84,7 +84,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab14398841764eeca790641287097d09",
+       "model_id": "5e46e73f0373424c803a3f0004b8a101",
        "version_major": 2,
        "version_minor": 0
       },
@@ -127,8 +127,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('test_df.csv')\n",
+    "df = pd.read_pickle('test_df.pkl')\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.info()"
    ]
   },
   {
@@ -155,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
