--- a/test_dataframe.ipynb
+++ b/test_dataframe.ipynb
@@ -16,7 +16,21 @@
     "from IPython.display import display\n",
     "from datetime import datetime as dt\n",
     "\n",
-    "from make_df_widgets import DFWidgets"
+    "from make_df_widgets import DFWidgets\n",
+    "from make_df import make_config_from_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "INPUT_PATH = ''\n",
+    "\n",
+    "# df = pd.read_csv(INPUT_PATH)\n",
+    "\n",
+    "INPUT_DATA = INPUT_PATH # or df"
    ]
   },
   {
@@ -25,13 +39,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def upload_json(json_path):\n",
+    "def upload_file(input_data, **kwargs):\n",
+    "    \"\"\"\n",
+    "    This is uploader for generating DataFrame.\n",
+    "    input data is expected json path, csv path, pickle path, or DataFrame.\n",
+    "    Args:\n",
+    "        input_data (Union[str, pd.DataFrame]) : json path, csv path, pickle path or DataFrame\n",
+    "        kwargs (Dict) : additional arguments for read csv or read_pickle\n",
+    "    Returns:\n",
+    "        df_dict (Dict) : Config data for generating GUI\n",
+    "    \"\"\"\n",
     "    try:\n",
-    "        with open(json_path, mode='r') as f:\n",
-    "            df_dict = json.load(f)\n",
+    "        if isinstance(input_data, str):\n",
+    "            exe = input_data.split('.')[-1]\n",
+    "            if exe == 'json':\n",
+    "                with open(input_data, mode='r') as f:\n",
+    "                    df_dict = json.load(f)\n",
+    "            elif exe == 'csv':\n",
+    "                input_data = pd.read_csv(input_data, **kwargs)\n",
+    "            elif exe == 'pickle':\n",
+    "                input_data = pd.read_pickle(input_data, **kwargs)\n",
+    "            else:\n",
+    "                df_dict = {}\n",
+    "        if isinstance(input_data, pd.DataFrame):\n",
+    "            df_dict = make_config_from_df(input_data)\n",
+    "\n",
     "    except Exception as e:\n",
     "        df_dict = {}\n",
-    "        print(e)\n",
+    "        import traceback\n",
+    "        traceback.print_exc()\n",
     "        \n",
     "    return df_dict"
    ]
@@ -50,7 +86,7 @@
     }
    ],
    "source": [
-    "df_dict = upload_json('')"
+    "df_dict = upload_file(INPUT_DATA)"
    ]
   },
   {
