update:out source to src

--- a/test_dataframe.ipynb
+++ b/test_dataframe.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,8 +23,15 @@
     "from IPython.display import display\n",
     "from datetime import datetime as dt\n",
     "\n",
-    "from make_df_widgets import DFWidgets\n",
-    "from make_df import make_config_from_df"
+    "from src.widgets import DFWidgets\n",
+    "from src.utils import make_config_from_df, upload_file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Definition"
    ]
   },
   {
@@ -26,133 +40,78 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "INPUT_PATH = ''\n",
+    "INPUT_PATH = '' # json, csv, pickle, pkl, or DataFrame is also OK\n",
     "\n",
-    "# df = pd.read_csv(INPUT_PATH)\n",
-    "\n",
-    "INPUT_DATA = INPUT_PATH # or df"
+    "INPUT_DATA = INPUT_PATH"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "df_dict = upload_file(INPUT_DATA)\n",
+    "df_dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Make Dummy DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def upload_file(input_data, **kwargs):\n",
-    "    \"\"\"\n",
-    "    This is uploader for generating DataFrame.\n",
-    "    input data is expected json path, csv path, pickle path, or DataFrame.\n",
-    "    Args:\n",
-    "        input_data (Union[str, pd.DataFrame]) : json path, csv path, pickle path or DataFrame\n",
-    "        kwargs (Dict) : additional arguments for read csv or read_pickle\n",
-    "    Returns:\n",
-    "        df_dict (Dict) : Config data for generating GUI\n",
-    "    \"\"\"\n",
-    "    try:\n",
-    "        if isinstance(input_data, str):\n",
-    "            exe = input_data.split('.')[-1]\n",
-    "            if exe == 'json':\n",
-    "                with open(input_data, mode='r') as f:\n",
-    "                    df_dict = json.load(f)\n",
-    "            elif exe == 'csv':\n",
-    "                input_data = pd.read_csv(input_data, **kwargs)\n",
-    "            elif exe == 'pickle':\n",
-    "                input_data = pd.read_pickle(input_data, **kwargs)\n",
-    "            else:\n",
-    "                df_dict = {}\n",
-    "        if isinstance(input_data, pd.DataFrame):\n",
-    "            df_dict = make_config_from_df(input_data)\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        df_dict = {}\n",
-    "        import traceback\n",
-    "        traceback.print_exc()\n",
-    "        \n",
-    "    return df_dict"
+    "df_w = DFWidgets(df_dict, lim_w=3)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Errno 2] No such file or directory: ''\n"
-     ]
-    }
-   ],
    "source": [
-    "df_dict = upload_file(INPUT_DATA)"
+    "## Description GUI\n",
+    "- **[make DF] Button**: Save a generating random dummy dataframe as pickle with set parameters when click\n",
+    "- **[DF Name]**: The name of dump file.\n",
+    "- **[Num Rows]**: The number of rows of generating data.\n",
+    "- **[Feat Name]**: A feature name.\n",
+    "- **[NaN rate]**: The rate of NaN in this feature.\n",
+    "- **[Dtype]**: A feature type. you can choose str, int, float, or datetime\n",
+    "    - **str**: You can choose kind of unique\n",
+    "        - **Random letter**: Randomly generated letter with a specified number of characters.\n",
+    "        - **Random number**: Randomly generated numbers with a specified number of characters. Missing digits are filled with 0.\n",
+    "        - **Unique Seaquential number**: Seaquential numbers from specified start.\n",
+    "        - **Unique letter**: Generates a unique letters with a specified number of characters.\n",
+    "        - **yourself**: Randomly generated letter with a specified list.\n",
+    "        - **nan to white space**: IF checked, translate NaN to space\n",
+    "    - **int**: Randomly generated integer from min to max.\n",
+    "    - **float**: Randomly generated float from min to max.\n",
+    "    - **datetime**: Seaquential datetime from start to end by freq. Any missing lines are repeated.\n",
+    "- **[+] Button**: Add a feature.\n",
+    "- **[×] Button**: Delete a feature"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df_w = DFWidgets(df_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b286693156074a5f9b2cd802c0ee7af4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Button(description='make DF', style=ButtonStyle()), Text(value='test_df', description='DF Name'…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e46e73f0373424c803a3f0004b8a101",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Box(children=(VBox(children=(Box(children=(Text(value='', description='Feat Name', layout=Layou…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
     "df_w.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
-      "\u001b[1;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "assert False # Stop run all"
    ]
@@ -164,7 +123,7 @@
    "outputs": [],
    "source": [
     "df = pd.read_pickle('test_df.pkl')\n",
-    "df.head()"
+    "df"
    ]
   },
   {
